--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,9 @@
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
+
 @font-face {
 	font-family: star-wars-font;
 	src: url("../fonts/starjout-webfont.woff");
@@ -33,7 +39,6 @@ img {
 	background-size: 300px;
 	z-index: 2;
 	cursor: default;
-	margin: -8px;
 	transition: all 0.1s ease;
 }
 
